--- a/nms-portfolio/index.html
+++ b/nms-portfolio/index.html
@@ -56,14 +56,14 @@
     <main id="main-content" class="main-content">
         <div class="container">
             <section class="hero-section">
-                <h2 class="hero-title">welcome!</h2>
+                <h2 class="hero-title">Welcome!</h2>
                 <p class="hero-subtitle">
                     My name is Nicole Sabin and I am a UX and Instructional Designer with a Master's Degree in Instructional Technology and Learning Sciences from Utah State University
                 </p>
             </section>
 
             <section class="recent-work">
-                <h2 class="section-title">My recent work</h2>
+                <h2 class="section-title">My Recent Work</h2>
                 <div class="projects-grid-horizontal">
                     <a href="projects/agile-project-management.html" class="project-card-horizontal" data-category="project-management">
                         <div class="project-image-wrapper-horizontal">
